--- a/web/assets/css/main.scss
+++ b/web/assets/css/main.scss
@@ -364,6 +364,7 @@ header {
     }
 }
 #respuestas {
+    display: none;
     header {
         width: 100%;
         border-bottom: 1px solid $orange;
